added necessary links and 2 member images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- TODO: fixed top  -->
         <div class="container">
             <div class="row w-75 align-items-center justify-content-start">
-                <img src="assets/LOGOS/assoc.png" class="d-none d-sm-inline-block col-2 img-fluid">
+                <a href="#" class="d-none d-sm-inline-block col-2"><img src="assets/LOGOS/assoc.png" alt="maths-assoc" class="img-fluid"></a>
                 <a class="col-auto navbar-brand fs-4" href="#">Mathematics Association
                     <span class="d-none d-md-block">BITS Pilani</span>
                 </a>
@@ -56,17 +56,11 @@
                             <li><a class="dropdown-item" href="./pages/new_events.html#talk-series">Talk Series</a></li>
                         </ul>
                     </li>
-                    <!-- Todo : Remove Contact Us and replace with Join Us. -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="contact-dropdown" role="button"
-                            data-bs-toggle="dropdown">
-                            Contact Us
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="#ContactUs">Contact Us</a></li>
-                            <li><a class="dropdown-item" href="./pages/join.html">Join Us</a></li>
-                        </ul>
+                    
+                    <li class="nav-item text-nowrap">
+                        <a class="nav-link" aria-current="page" href="./pages/join.html">Join Us</a>
                     </li>
+                    <!-- Todo : Add newsletters and alumni section when ready. -->
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Newsletters</a>
                     </li> -->
@@ -342,7 +336,8 @@
             <div class="row justify-content-evenly pb-4">
                 <!-- <div class="col-12 col-lg-6 col-xl-4 d-flex justify-content-evenly mb-5 mb-lg-0"> -->
                 <div class="col-10 col-lg-6 col-xl-5 d-flex justify-content-center gap-3 mb-5 mb-lg-0">
-                    <img src="assets/LOGOS/BITS.png" alt="BITS Pilani" class="img-fluid w-25">
+                    <a href="https://www.bits-pilani.ac.in/" class="w-25"><img src="assets/LOGOS/BITS.png" alt="BITS Pilani" class="img-fluid"></a>
+                    <!-- <img src="assets/LOGOS/BITS.png" alt="BITS Pilani" class="img-fluid w-25"> -->
                     <div class="d-flex flex-column justify-content-center">
                         <span>Mathematics Association <span class="d-none d-md-inline">BITS Pilani</span></span>
                         <span>BITS Pilani</span>
@@ -352,9 +347,9 @@
                 <div class="col-lg-4 col-12 text-center my-auto">
                     <div class="row">
                         <div class="col-12 mb-1">
-                            <a href="#"><i class="bi bi-linkedin text-light fs-3 mx-1"></i></a>
-                            <a href="#"><i class="bi bi-instagram text-light fs-3 mx-1"></i></a>
-                            <a href="#"><i class="bi bi-facebook text-light fs-3 mx-1"></i></a>
+                            <a href="https://www.linkedin.com/company/math-bitspilani/"><i class="bi bi-linkedin text-light fs-3 mx-1"></i></a>
+                            <a href="https://www.instagram.com/maths.assoc.bits.pilani/"><i class="bi bi-instagram text-light fs-3 mx-1"></i></a>
+                            <a href="https://www.facebook.com/maths.assoc.bits.pilani/"><i class="bi bi-facebook text-light fs-3 mx-1"></i></a>
                         </div>
                         <div class="col-12">
                             <i class="bi bi-envelope-fill fs-6 mx-2"></i>
