--- a/pages/members.html
+++ b/pages/members.html
@@ -21,7 +21,8 @@
         <!-- TODO: fixed top  -->
         <div class="container">
             <div class="row w-75 align-items-center justify-content-start">
-                <img src="../assets/LOGOS/assoc.png" class="d-none d-sm-inline-block col-2 img-fluid">
+                <a href="../index.html" class="d-none d-sm-inline-block col-2"><img src="../assets/LOGOS/assoc.png" alt="maths-assoc" class="img-fluid"></a>
+                <!-- <img src="../assets/LOGOS/assoc.png" class="d-none d-sm-inline-block col-2 img-fluid"> -->
                 <a class="col-auto navbar-brand fs-4" href="#">Mathematics Association
                     <span class="d-none d-md-block">BITS Pilani</span>
                 </a>
@@ -56,16 +57,10 @@
                             <li><a class="dropdown-item" href="./new_events.html#talk-series">Talk Series</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="contact-dropdown" role="button"
-                            data-bs-toggle="dropdown">
-                            Contact Us
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="../index.html#ContactUs">Contact Us</a></li>
-                            <li><a class="dropdown-item" href="#">Join Us</a></li>
-                        </ul>
+                    <li class="nav-item text-nowrap">
+                        <a class="nav-link" aria-current="page" href="./pages/join.html">Join Us</a>
                     </li>
+                    <!-- Todo : Add newsletters and alumni section when ready. -->
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Newsletters</a>
                     </li> -->
@@ -82,7 +77,7 @@
     </section> -->
 
     <section class="bg-dark text-light container-fluid senior-members py-5">
-        <div class="container display-4 fw-bold text-center pb-5">
+        <div class="container display-6 fw-bold text-center pb-5">
             <i class="bi bi-people-fill"></i>
             Current Members
         </div>
@@ -93,7 +88,7 @@
                 <span class="d-block">Professor In-Charge</span>
             </div>
         </div>
-        <div class="row p-4 justify-content-evenly text-center gap-4 gap-md-0">
+        <div class="row p-4 justify-content-evenly text-center gap-5 gap-md-0">
             <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                 <img src="../assets/members/rituj.png" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="president">
                 <span class="fs-5">Rituj Mittal</span>
@@ -157,7 +152,7 @@
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3">
                 <img src="../assets/members/devansh.png" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="devansh">
                 <span class="fs-5">Devansh Tanna</span>
-                <span class="d-block">Internal Events Coordinator</span>
+                <span class="d-block">Workshop Coordinator</span>
                 <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
@@ -171,7 +166,7 @@
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3 mb-lg-2">
-                <img src="../assets/members/kshitij.png" class="rounded-circle img-fluid shadow border border-dark border-5" alt="parth">
+                <img src="../assets/members/parthsarthi.jpg" class="rounded-circle img-fluid shadow border border-dark border-5" alt="parth">
                 <span class="fs-6">Parthsarthi Neema</span>
                 <span class="d-block">Senior Tech Team Coordinator</span>
                 <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
@@ -185,9 +180,9 @@
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3 mb-lg-2">
-                <img src="../assets/members/kshitij.png" class="rounded-circle img-fluid shadow border border-dark border-5" alt="chirag">
+                <img src="../assets/members/chirag.jpeg" class="rounded-circle img-fluid shadow border border-dark border-5" alt="chirag">
                 <span class="fs-5">Chirag Kakkar</span>
-                <span class="d-block">Chief Editor</span>
+                <span class="d-block">Editor in Chief</span>
                 <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
@@ -297,6 +292,13 @@
                 <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3 mb-lg-2">
+                <img src="../assets/members/sarvesh.jfif" class="rounded-circle img-fluid shadow border border-dark border-5" alt="chirag">
+                <span class="fs-5">Sarvesh Khandelwal</span>
+                <span class="d-block">Executive Member</span>
+                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
+                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
+            </div>
         </div>
 
     </section>
@@ -306,7 +308,7 @@
             <div class="row justify-content-evenly pb-4">
                 <!-- <div class="col-12 col-lg-6 col-xl-4 d-flex justify-content-evenly mb-5 mb-lg-0"> -->
                 <div class="col-10 col-lg-6 col-xl-5 d-flex justify-content-center gap-3 mb-5 mb-lg-0">
-                    <img src="../assets/LOGOS/BITS.png" alt="BITS Pilani" class="img-fluid w-25">
+                    <a href="https://www.bits-pilani.ac.in/" class="w-25"><img src="../assets/LOGOS/BITS.png" alt="BITS Pilani" class="img-fluid"></a>
                     <div class="d-flex flex-column justify-content-center">
                         <span>Mathematics Association <span class="d-none d-md-inline">BITS Pilani</span></span>
                         <span>BITS Pilani</span>
@@ -316,9 +318,9 @@
                 <div class="col-lg-4 col-12 text-center my-auto">
                     <div class="row">
                         <div class="col-12 mb-1">
-                            <a href="#"><i class="bi bi-linkedin text-light fs-3 mx-1"></i></a>
-                            <a href="#"><i class="bi bi-instagram text-light fs-3 mx-1"></i></a>
-                            <a href="#"><i class="bi bi-facebook text-light fs-3 mx-1"></i></a>
+                            <a href="https://www.linkedin.com/company/math-bitspilani/"><i class="bi bi-linkedin text-light fs-3 mx-1"></i></a>
+                            <a href="https://www.instagram.com/maths.assoc.bits.pilani/"><i class="bi bi-instagram text-light fs-3 mx-1"></i></a>
+                            <a href="https://www.facebook.com/maths.assoc.bits.pilani/"><i class="bi bi-facebook text-light fs-3 mx-1"></i></a>
                         </div>
                         <div class="col-12">
                             <i class="bi bi-envelope-fill fs-6 mx-2"></i>
