current and past members completed with profile links too

--- a/pages/members.html
+++ b/pages/members.html
@@ -43,7 +43,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark">
                             <li><a class="dropdown-item active" href="#">Current Members</a></li>
-                            <li><a class="dropdown-item" href="#">Past Members</a></li>
+                            <li><a class="dropdown-item" href="past_members.html">Past Members</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -86,6 +86,7 @@
                 <img src="../assets/members/prof.png" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="prof-in-charge">
                 <span class="fs-5">Dr. Sumanta Pasari</span>
                 <span class="d-block">Professor In-Charge</span>
+                <a href="https://universe.bits-pilani.ac.in/pilani/sumantapasari/profile"><i class="bi bi-globe2 text-light fs-5 mx-1"></i></a>
             </div>
         </div>
         <div class="row p-4 justify-content-evenly text-center gap-5 gap-md-0">
@@ -93,15 +94,14 @@
                 <img src="../assets/members/rituj.png" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="president">
                 <span class="fs-5">Rituj Mittal</span>
                 <span class="d-block">President</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
+                <a href="https://www.linkedin.com/in/rituj-mittal-b6b94a166/"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                 <img src="../assets/members/prajwal.png" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="vice-president">
                 <span class="fs-5">Prajwal Ranjan</span>
                 <span class="d-block">Vice President</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
+                <a href="https://www.linkedin.com/in/prajwal-ranjan-64907715b/"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
+                <a href="https://github.com/prajwalranjan"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
         </div>
         <div class="row p-4 justify-content-evenly text-center gap-5 gap-md-0">
@@ -109,22 +109,19 @@
                 <img src="../assets/members/atmesh.png" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="secretary">
                 <span class="fs-6">Atmesh Mahapatra</span>
                 <span class="d-block">Secretary</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
+                <a href="https://www.linkedin.com/in/atmesh-mahapatra-9372b0190/"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
+                <a href="https://github.com/atmeshvm"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3">
                 <img src="../assets/members/bharat.jpeg" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="joint-secretary">
                 <span class="fs-5">Bharat Agarwal</span>
                 <span class="d-block">Joint Secretary</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
+                <a href="https://github.com/BhrtAgrwl01"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
             <div class="col-6 d-sm-none d-md-block col-md-3 col-lg-2 mb-3">
                 <img src="../assets/members/pranay.png" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="apogee">
                 <span class="fs-5">Pranay Bansal</span>
                 <span class="d-block">Apogee Coordinator</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
         </div>
         <div class="row p-4 justify-content-evenly text-center gap-4 gap-md-0">
@@ -132,59 +129,49 @@
                 <img src="../assets/members/pranay.png" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="apogee">
                 <span class="fs-5">Pranay Bansal</span>
                 <span class="d-block">Apogee Coordinator</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3">
                 <img src="../assets/members/ujjwal.png" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="technical">
                 <span class="fs-5">Ujjwal Jain</span>
                 <span class="d-block">Technical Head</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
+                <a href="https://www.linkedin.com/in/ujjwal26jain/"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
+                <a href="https://github.com/Ujjwaljain2608"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3">
                 <img src="../assets/members/nishant.png" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="external-events">
                 <span class="fs-5">Nishant Sahu</span>
                 <span class="d-block">External Events Coordinator</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
+                <a href="https://www.linkedin.com/in/nishant-sahu-9807751ab/"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3">
                 <img src="../assets/members/devansh.png" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="devansh">
                 <span class="fs-5">Devansh Tanna</span>
                 <span class="d-block">Workshop Coordinator</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
+                <a href="https://www.linkedin.com/in/devansh-tanna-0210/"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
+                <a href="https://github.com/Devansh0210"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
         </div>
         <div class="row p-4 justify-content-evenly text-center gap-4 gap-md-0">
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3 mb-lg-2">
-                <img src="../assets/members/kshitij.png" class="rounded-circle img-fluid shadow border border-dark border-5" alt="kshitij">
-                <span class="fs-5">Kshitij Gupta</span>
-                <span class="d-block">Internal Events Coordinator</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
-            </div>
-            <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3 mb-lg-2">
                 <img src="../assets/members/parthsarthi.jpg" class="rounded-circle img-fluid shadow border border-dark border-5" alt="parth">
                 <span class="fs-6">Parthsarthi Neema</span>
-                <span class="d-block">Senior Tech Team Coordinator</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
+                <span class="d-block">Joint Technical Head</span>
+                <a href="https://www.linkedin.com/in/parthsarthi-neema-428090192/"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
+                <a href="https://github.com/parthsarthi313"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3 mb-lg-2">
                 <img src="../assets/members/rajan.jfif" class="rounded-circle img-fluid shadow border border-dark border-5" alt="rajan">
                 <span class="fs-5">Rajan Sahu</span>
                 <span class="d-block">Editing Team Head</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
+                <a href="https://www.linkedin.com/in/rajan-sahu-0354aa19b/"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
+                <!-- <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a> -->
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3 mb-lg-2">
                 <img src="../assets/members/chirag.jpeg" class="rounded-circle img-fluid shadow border border-dark border-5" alt="chirag">
                 <span class="fs-5">Chirag Kakkar</span>
                 <span class="d-block">Editor in Chief</span>
-                <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
-                <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
+                <a href="https://www.linkedin.com/in/chirag-kakkar-20b72b19a/"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
+                <!-- <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a> -->
             </div>
         </div>
     </section>
@@ -211,7 +198,7 @@
             </div>
             <div class="col-6 d-sm-none d-md-block col-md-3 col-lg-2 mb-3">
                 <img src="../assets/members/pratham.JPG" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="apogee">
-                <span class="fs-5">Pratham</span>
+                <span class="fs-5">Pratham Arya</span>
                 <span class="d-block">Executive Member</span>
                 <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
@@ -220,7 +207,7 @@
         <div class="row p-4 justify-content-evenly text-center gap-4 gap-md-0">
             <div class="d-none d-sm-block col-sm-4 d-md-none col-md-3 col-lg-2 mb-3">
                 <img src="../assets/members/pratham.JPG" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="apogee">
-                <span class="fs-5">Pratham</span>
+                <span class="fs-5">Pratham Arya</span>
                 <span class="d-block">Executive Member</span>
                 <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
@@ -234,7 +221,7 @@
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3">
                 <img src="../assets/members/nandita.JPG" class="rounded-circle img-fluid shadow border border-dark border-5 mb-2" alt="technical">
-                <span class="fs-5">Nandita</span>
+                <span class="fs-5">Nandita Vakeel</span>
                 <span class="d-block">Executive Member</span>
                 <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
@@ -257,7 +244,7 @@
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3 mb-lg-2">
                 <img src="../assets/members/anjali.JPG" class="rounded-circle img-fluid shadow border border-dark border-5" alt="kshitij">
-                <span class="fs-5">Anjali</span>
+                <span class="fs-5">Anjali Choudhary</span>
                 <span class="d-block">Executive Member</span>
                 <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
@@ -280,14 +267,14 @@
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3 mb-lg-2">
                 <img src="../assets/members/arham.JPG" class="rounded-circle img-fluid shadow border border-dark border-5" alt="rajan">
-                <span class="fs-5">Arham Chajjer</span>
+                <span class="fs-5">Arham Chhajer</span>
                 <span class="d-block">Executive Member</span>
                 <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3 mb-lg-2">
                 <img src="../assets/members/shreya.JPG" class="rounded-circle img-fluid shadow border border-dark border-5" alt="chirag">
-                <span class="fs-5">Shreya</span>
+                <span class="fs-5">Shreya Mishra</span>
                 <span class="d-block">Executive Member</span>
                 <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
