--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark">
                             <li><a class="dropdown-item" href="./pages/members.html">Current Members</a></li>
-                            <li><a class="dropdown-item" href="#">Past Members</a></li>
+                            <li><a class="dropdown-item" href="./pages/past_members.html">Past Members</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
